--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "npx serverest",
     "cy:run": "npx cypress run",
     "cy:report": "npx mochawesome-merge ./mochawesome-report/mochawesome*.json > C:\\repositorio\\teste-api-cypress\\mochawesome-report\\report.json && npx marge C:\\repositorio\\teste-api-cypress\\mochawesome-report\\report.json",
-    "cy:run-ci": "start-server-and-test start http://localhost:3000/api-doc test"  
+    "cy:run-ci": "start-server-and-test start http://localhost:3000/api-doc test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^12.3.0",
+    "@types/jest": "^29.5.5",
+    "cypress": "^12.17.4",
     "cypress-multi-reporters": "^1.6.2",
-    "joi": "^17.7.0",
+    "dotenv": "^16.3.1",
+    "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.4",
+    "joi": "^17.10.2",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.2",
-    "mochawesome-report-generator": "^6.2.0"
+    "mochawesome-report-generator": "^6.2.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "start-server-and-test": "^2.0.0"
